Hangman-web_Mathys

--- a/web/web_menu.html
+++ b/web/web_menu.html
@@ -15,4 +15,5 @@
     <p><a class="normal" href="/rules">Jouer en Mode Normal</a>| ou |<a class="difficile" href="/rules_hard">Jouer en Mode Difficile</a></p>
     <h2>Merci d'avoir choisi le pendu !</h2>
     </div>
+    <p><a class="credits" href="/credits">Crédits</a></p>
 </body>
